# inPhormer

./: README.md  pyproject.toml  test.ipynb
src/inphormer/: config.py
src/inphormer/data_loader/: annotation_data_loader.py  config.py
src/inphormer/data_loader/data/: AF50m_subset_REGEX_man_labels_5k.txt  test_split.tsv  train_split.tsv  val_split.tsv
src/inphormer/models/llm/: classifier.py
src/inphormer/models/tf_idf/: __init__.py  tfidf_classifier.py
