[project]
name = "inphormer"
version = "0.1.0"
description = ""
authors = [
    { name = "Mila-MP", email = "mila.pertuy@student.kuleuven.be" },
    { name = "Cara Eidsmo Holt", email = "cara.eidsmoholt@student.kuleuven.be" },
    { name = "Elon Gawi Matok", email = "elon.gawimatok@student.kuleuven.be" }
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "dash (>=3.3.0,<4.0.0)",
    "transformers (>=4.57.1,<5.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "plotly (>=6.4.0,<7.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "spacy (>=3.8.8,<4.0.0)",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl"
]

[tool.poetry]
packages = [{include = "inphormer", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
